# apodeixi

./: .gitignore  210515-a6i-env.yaml  210525-a6i-env.yaml  210820_a6i_env.txt  LICENSE  README.md  debug-conda-build.code-workspace  pyproject.toml  setup.cfg  setup.py  troubleshoot_build.py
anaconda-patches/: README.md
apodeixi/: __init__.py
apodeixi/controllers/journeys/delivery_planning/: big_rocks.py
apodeixi/controllers/kernel/bdd/: bdd_scaffolding_controller.py  capability_hierarchy.py
apodeixi/controllers/util/: manifest_api.py  skeleton_controller.py
apodeixi/knowledge_base/: knowledge_base.py  knowledge_base_store.py  knowledge_base_util.py
apodeixi/knowledge_base/tests_unit/: test_knowledge_base.py
apodeixi/representers/: __init__.py  as_dataframe.py  as_excel.py
apodeixi/representers/tests_unit/: test_as_dataframe.py  test_as_excel.py
apodeixi/representers/tests_unit/output_data/: test_dataframe_2_xl_EXPECTED.txt  test_dataframe_2_xl_MANIFEST.xlsx
apodeixi/testing_framework/: a6i_unit_test.py  mock_kb_store.py  test_kb_store.py
apodeixi/text_layout/: column_layout.py  excel_layout.py  text_processor.py
apodeixi/text_layout/tests_unit/: test_column_layout.py  test_excel_layout.py  test_text_processor.py
apodeixi/text_layout/tests_unit/input_data/: test_thick_layout_INPUT.csv
apodeixi/text_layout/tests_unit/output_data/: test_small_text_20_OUTPUT.txt  test_small_text_40_EXPECTED.txt  test_small_text_80_OUTPUT.txt  test_sparse_layout_EXPECTED.csv  test_sparse_layout_explain_EXPECTED.txt  test_sparse_layout_explain_OUTPUT.txt  test_sparse_layout_results_OUTPUT.txt  test_thick_layout_EXPECTED.csv  test_thick_layout_OUTPUT.csv  (+3 more)
apodeixi/util/: ApodeixiError.py  ApodeixiUnitTest.py  a6i_error.py  a6i_unit_test.py  formatting_utils.py
apodeixi/util/test_unit/: test_ApodeixiError.py
apodeixi/util/tests_unit/: test_a6i_error.py
apodeixi/xli/: DEPRECATED.py  __init__.py  breakdown_builder.py  posting_controller_utils.py  xlimporter.py
apodeixi/xli/tests_unit/: test_BreakdownBuilder.py  test_DEPRECATED.py  test_UID_Store.py  test_breakdown_builder.py
conda-packaging/: Conda-Packaging-README.md  meta.yaml
config/: apodeixi_config.toml
controllers/: excel-importer.ipynb
documentation/: Thumbs.db  a6i-logical-design.vsdx
documentation/apodeixi 2.0/: Apodeixi Technical Direction.docx  apodeixi 2.0 - ideas.vsdx
documentation/apodeixi 2.0/POC 1/: Apodeixi2 ideation - POC1.docx  Apodeixi2 ideation - POC1.vsdx  ~$odeixi2 ideation - POC1.docx  ~WRL3818.tmp
documentation/backlog/: bugs_rfes.txt
documentation/kernel-knowledge-base/excel-postings/: Capability hierarchy.xlsx  capability-hierarchy.kernel.a6i.xlsx
documentation/kernel-knowledge-base/manifests/: capability-hierarchy.kernel.a6i.yaml
domain-model/outbound/: ArchetypeEntity.yaml  EntityFeature.yaml  InstancedEntity.yaml  SegmentationScheme.yaml  ValueProposition.yaml
examples/financials-gtm/entities/: LargeUSBank.yaml  MegaUSBank.yaml
examples/financials-gtm/features/: SizeOfAssets.yaml
examples/financials-gtm/segmentation/: GeoSegmentation.yaml  SizeOfAssetsSegmentation.yaml
excel-api/: marathon-investment.xlapi.a6s.xlsx
src/apodeixi/: __init__.py
src/apodeixi/cli/: apo_cli.py  cli_utils.py  error_reporting.py  kb_session.py  label_parser.py  label_parser.tx
src/apodeixi/knowledge_base/: file_kb_store.py  filing_coordinates.py  git_kb_store.py  isolation_kb_store.py  kb_environment.py  knowledge_base.py  knowledge_base_store.py  knowledge_base_util.py  manifest_utils.py  shutil_kb_store.py
src/apodeixi/representers/: as_dataframe.py  as_excel.py
src/apodeixi/testing_framework/: a6i_integration_test.py  a6i_skeleton_test.py  a6i_unit_test.py  mock_kb_store.py
src/apodeixi/text_layout/: column_layout.py  excel_layout.py  text_processor.py
src/apodeixi/tree_math/: assertion_tree.py  link_table.py
src/apodeixi/tree_relationships/: foreign_key_constraints.py
src/apodeixi/util/: a6i_error.py  apodeixi_config.py  dataframe_utils.py  dictionary_utils.py  excel_writer_utils.py  formatting_utils.py  list_utils.py  path_utils.py  performance_utils.py  reporting_utils.py  rollover_utils.py  time_buckets.py  warning_utils.py  yaml_utils.py
src/apodeixi/xli/: DEPRECATED.py  __init__.py  breakdown_builder.py  interval.py  posting_controller_utils.py  uid_acronym_schema.py  uid_store.py  update_policy.py  xlimporter.py
test/manifests-repo/: MyTransformingProduct-investment-committment.yaml  MyTransformingProduct-marathon-plan.yaml  S1-AccelerateCloud-breakdown.yaml
test/notebooks/: test-breakdown-builder.ipynb  test-xlimporter.ipynb
toolchain/: config.sh  env.sh  setup.sh
(+396 files in other folders)
