[metadata]
name = apodeixi

# Versioning numbers try to follow PEP 440
# https://www.python.org/dev/peps/pep-0440/
version = 0.2.0a2
author = Alejandro Hernandez
author_email = alejandro@chateauclaudia-labs.com
license = MIT
description = Proof-oriented, reverse Conway domain model and controllers for human organizations, inspired by Kubernetes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChateauClaudia-Labs/apodeixi.git
project_urls =
    Bug Tracker = https://github.com/ChateauClaudia-Labs/apodeixi.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires = 
    pandas >=1.2.4
    openpyxl >=3.0.7
    pyyaml >=5.4.1
    xlsxwriter >=1.3.8
    nltk >=3.6.1

[options.packages.find]
where = src

[options.package_data]
#* = tests_unit/input_data/*.xlsx, tests_unit/input_data/*.yaml, tests_unit/output_data/*.xlsx, tests_unit/output_data/*.yaml
* = tests_unit/input_data/*, tests_unit/output_data/*