[metadata]
name = apodeixi

# Versioning numbers try to follow PEP 440
# https://www.python.org/dev/peps/pep-0440/
version = attr: apodeixi.__version__
author = Alejandro Hernandez
author_email = alejandro@chateauclaudia-labs.com
license = MIT
description = Proof-oriented, reverse Conway domain model and controllers for human organizations, inspired by Kubernetes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChateauClaudia-Labs/apodeixi.git
project_urls =
    Bug Tracker = https://github.com/ChateauClaudia-Labs/apodeixi.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9.6
install_requires = 
    pandas >=1.3.1
    openpyxl >=3.0.7
    pyyaml >=5.4.1
    xlsxwriter >=3.0.1
    nltk >=3.6.1
    notebook >=6.4.2
    toml >=0.10.2
    jinja2 >=2.11.3
    click >=8.0.1
    tabulate >=0.8.9


[options.packages.find]
where = src

[options.package_data]
#                                      GOTCHA: 
#
# Through painful hours of trial and error, found that for these folders with wildcards to get picked up
#  they must lie **immediately** under a python module.
#  So for example,  notebooks/* is not picked up, but tests_unit/output_data/notebooks/* is.
#* = tests_unit/output_data/notebooks/*, config/*, tests_unit/input_data/*, tests_unit/output_data/*, tests_integration/results_data/*
* = expected_data/notebooks/*, config/*, input_data/*, expected_data/*, results_data/*, results_data/*/*, results_data/*/*/*

[options.entry_points]
console_scripts =
    apo = apodeixi.cli.apo_cli:apo_cli